--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,15 @@ java {
 }
 
 configurations {
+
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+
+	all {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	}
+
 }
 
 repositories {
@@ -37,7 +43,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 }
+
 
 tasks.named('test') {
 	outputs.dir snippetsDir
