--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/awstest
+spring.datasource.username=root
+spring.datasource.password=1234
 
+
+spring.jpa.generate-ddl=false
+
+loggin.config=classpath:log4j2.xml
